# finny

./: .gitignore  docker-compose.yml
.github/workflows/: api-ci.yml  api-deploy.yml
.metals/: metals.lock.db
api/: .dockerignore  .gitignore  .scalafix.conf  .scalafmt.conf  Dockerfile  Makefile  README.md  build.sbt  build.sc  docker-compose.yml  fly.toml
api/.bsp/: sbt.json
api/docker/: Dockerfile.faktory
api/powersync/: sync-rules.yaml
api/project/: plugins.sbt
api/supabase/: config.toml
appstoremocks/: iOS Starter Template.mockup
archive/expo/: package-lock.json  package.json
archive/go-api/: context.go
archive/swift-backend/: Makefile  Package.resolved  Package.swift  README.md  docker-compose.yml
archive/tauri/: README.md  index.html  package.json  vite.config.ts
archive/ts-backend/: bun.lockb
backend/: Package.resolved  Package.swift  dune-project
backend/lib/: app.ml  dune
cask/: .gitignore  Dockerfile  build.sc
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
elixir_backend/: .env.example  Dockerfile  fly.toml  mix.exs
elixir_backend/assets/: tailwind.config.js
elixir_backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
elixir_backend/lib/: elixir_backend_web.ex
expo/finny/: app.json  package-lock.json  package.json
finny-api/: .gitignore  .scalafix.conf  .scalafmt.conf  Makefile  build.sbt  build.sc  docker-compose.yml  fly.toml
finny-api/.bsp/: sbt.json
finny-api/.zed/: settings.json
finny-api/powersync/: sync-rules.yaml
finny-api/supabase/: config.toml
finny-app/: Makefile  README.md  pubspec.yaml
finny-app/ios/: Podfile
finny-app/lib/: main.dart
finny-app/test/: finance_test.dart  unit_test.dart
finny-backend/: .air.toml  .env.template  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  go.mod  go.sum  main.go
finny-backend-loco/: Cargo.toml
finny-backend-loco/examples/: playground.rs
finny-backend-loco/src/: app.rs  lib.rs
finny-backend-rs/: Cargo.toml
finny-backend-rs/config/: development.yaml  test.yaml
finny-backend/account/: account_test.go
finny-backend/budget/: budget_test.go
finny-backend/docs/: ynab_openapi.yaml
finny-backend/finalytics/: average_monthly_cashflows.sql  finalytics.go  finalytics_job.go  finalytics_test.go  worker_manager_test.go
finny-backend/goal/: goal.go
finny-backend/plaid_item/: plaid_item.go
finny-worker/: .dockerignore  .env.template  README.md  go.mod  go.sum  main.go
fire-web/: astro.config.mjs  package-lock.json  package.json
go-api/: Dockerfile  Makefile  go.mod  go.sum  main.go
go-backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  GetUserOlderThanAge.edgeql  GetUserOlderThanAge_edgeql.go  Makefile  README.md  docker-compose.yml  go.mod  go.sum  main.go
hailmary/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  fly.toml  recipe.json
hailmary/src/: budget.rs  config.rs  database.rs  error.rs  finalytics.rs  lib.rs  main.rs  profile.rs
hailmary/tests/: finalytics_tests.rs  profile_tests.rs
ios/: .swift-format  Makefile
marketing/: README.md  package-lock.json  package.json
mobile/: Makefile  README.md  docker-compose.yml  pubspec.yaml
proxy_api/: Makefile  main.go  user_repo.go
py-tui/: Makefile  main.py  schema.py
rs_tui/: Cargo.toml
rs_tui/src/: app.rs  handler.rs  main.rs  ui.rs
scala-api/: .env  .gitignore  .scalafix.conf  Makefile  README.md  build.sc  bun.lockb  docker-compose.yml  package.json
scala-backend/: build.sbt
supabase/: README.md  config.toml
swift-backend/: .swift-format  Kraftfile  Makefile  Package.resolved  Package.swift  README.md  docker-compose.yml  fly.toml
tauri/: bun.lockb  package.json
tauri/backend/: Cargo.toml
tauri/backend/entity/src/: accounts.rs  goals.rs  lib.rs  plaid_api_events.rs  plaid_items.rs  transactions.rs
tauri/backend/migration/: schema.sql
tauri/backend/migration/src/: lib.rs  m20240527_034542_users.rs
tauri/backend/proxy_api/: Cargo.toml  Rocket.toml
tauri/backend/proxy_api/src/: errors.rs  main.rs
tauri/backend/src/: app_state.rs  db.rs  entities.rs  errors.rs  lib.rs  log.rs  main.rs  plaid.rs  user_repo.rs
ts-backend/: .env.template  .gitignore  bun.lockb  drizzle.config.ts  fly.toml  package.json  tsconfig.json
tui/: README.md  requirements.txt
worker/: Dockerfile  go.sum
xplatform/: README.md
(+681 files in other folders)
