[package]
name = "hailmary"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.64"
uuid = { version = "1.11.0", features = ["v4"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
tokio = { version = "1.28", features = ["full"] }
dotenvy = "0.15.7"

[profile.dev.package.sqlx-macros]
opt-level = 3
