[package]
name = "hailmary"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.6"
chrono = "0.4.38"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "json"] }
thiserror = "1.0.64"
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
