[package]
name = "rs_tui"
version = "0.1.0"
authors = ["Dennis Dang <dangggdennis@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
httpclient = "0.21.3"
plaid = "8.0.0"
ratatui = "0.26.0"
tokio = { version = "1.35.1", features = ["full"] }
