[package]
name = "finny"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "finny_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "=2.0.0-beta.19", features = [] }
tauri-plugin-shell = "2.0.0-beta.5"
tauri-plugin-store = "2.0.0-beta.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "0.10.2", features = ["bundled"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
log = "0.4.21"
specta = "=2.0.0-rc.12"
tauri-specta = { version = "=2.0.0-rc.10", features = ["typescript"] }
