[package]
name = "finny"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "migration", "entity"]

[lib]
name = "finny_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
anyhow = "1.0.86"
entity = { path = "entity" }
httpclient = "0.21.3"
log = "0.4.21"
migration = { path = "migration" }
plaid = "8.0.0"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.12"
tauri = { version = "=2.0.0-beta.19", features = [] }
tauri-plugin-shell = "2.0.0-beta.5"
tauri-plugin-store = "2.0.0-beta.6"
tauri-specta = { version = "=2.0.0-rc.10", features = ["typescript"] }
thiserror = "1.0.61"
tracing-subscriber = "0.3.18"
